--- a/projects/work 1/Deadspace (2008)/css/deadspace_mobile.css
+++ b/projects/work 1/Deadspace (2008)/css/deadspace_mobile.css
@@ -16,8 +16,7 @@ main {
 }
 main div {
   padding: 0 1vw;
-  height: 100vh;
-  max-height: 100dvh;
+  height: 100lvh;
 }
 p {
   font-size: 0.9rem;
